# car-racing

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  environment.yml  package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  structure  structure.drawio
.github/workflows/: tests.yml
car_racing/control/: control.py  ilqr_helper.py  lmpc_helper.py
car_racing/planner/: __init__.py  base.py  lmpc.py  lqr.py  mpc.py  overtake.py  pid.py
car_racing/planning/: overtake_path_planner.py  overtake_traj_planner.py  planner_helper.py
car_racing/racing/: offboard.py  realtime.py
car_racing/racing_env/: __init__.py  env.py  params.py  simulator.py  track.py  vehicle.py
car_racing/system/: system_identification.py  vehicle_dynamics.py
car_racing/tests/: control_test.py  ilqr_test.py  lmpc_test.py  mpccbf_test.py  overtake_planner_test.py  system_identification_test.py
car_racing/utils/: base.py  racing_env.py
car_racing_sim/: package.xml
car_racing_sim/launch/: car_racing_dev.launch
car_racing_sim/msg/: VehicleControl.msg
car_racing_sim/scripts/: controller1.py  policy.py  racing_car.py  racing_sim.py  solver.py  utils.py
car_racing_sim/tests/: identification.py  tracking.py
data/optimal_traj/: xcurv_ellipse.csv  xcurv_goggle.csv  xcurv_l_shape.csv  xcurv_m_shape.csv  xglob_ellipse.csv  xglob_goggle.csv  xglob_l_shape.csv  xglob_m_shape.csv
docs/: offboard.md  realtime.md  repeated_loop.md
examples/: identification.py  racing.py  tracking.py
launch/: car_racing_sim.launch
msg/: NumVehicle.msg  OptimalTraj.msg  TrackInfo.msg  VehicleList.msg  VehicleState.msg  VehicleStateCurv.msg  VehicleStateGlob.msg
plot/: calculate_overtaking_time.py  calculate_success_rate.py  find_median_time.py  plot_figure1.py  plot_orientation.py  plot_speed.py  plot_speed_orientation.py  plot_trajectory_speed.py  plot_zoom_in.py
pycar_racing/: __init__.py  policy.py  racing_env.py
sim/: offboard.py  realtime.py  repeated_loop.py
src/: controller1.py  policy.py  racing_car.py  racing_env.py  racing_sim.py  realtime.py  repeated_loop.py  start_simulation.py  start_visulization.py  test.py  utils.py  vehicle1.py  vehicle_dynamics.py  visulization.py
srv/: AddNewVehicle.srv
tests/: auto_control_test.py  auto_mpccbf_test.py  auto_racing_game_test.py  identification.py  racing.py  tracking.py
utils/: base.py  constants.py  ctrl.py  lmpc_helper.py  path_planner.py  planner.py  racing_env.py  racing_game_helper.py  system_id.py  traj_planner.py
(+52 files in other folders)
