[metadata]
name = car_racing
description = A toolkit to test control and planning problems for car racing simulation environment.
author = Suiyi He, Jun Zeng
license = MIT
license_file = LICENSE
platforms = linux, unix, osx, win32, cygwin
classifiers = 
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =car_racing
zip_safe = no