[metadata]
name = car_racing
description = A toolkit to test control and planning problems for car racing simulation environment.
author = Suiyi He, Jun Zeng
license = MIT
license_file = LICENSE
platforms = linux, unix, osx, win32, cygwin
classifiers = 
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =car_racing
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tests = py.typed

[flake8]
max-line-length = 160